# model_learning

./: CMakeLists.txt  Readme.md  package.xml
apps/: model_learner.cpp  model_learning_analyzer.cpp
configs/: cam_pitch_yaw.json  default_vision_correction_model.json  vision_correction_analyzer.json  vision_correction_debug.json  vision_correction_learner.json  vision_correction_model.json  vision_input_reader.json
configs/ball_models/: position_sequence_reader.json  trajectory_input_reader.json  trajectory_predictor_learner.json
configs/basic_models/: data1.csv  linear_model_data_reader.json  linear_model_learner.json  readme.md  trained_model.json
configs/humanoid_models/: poses_optimization_data_set_reader.json  poses_optimization_learner.json  vcm_distortion.json  vcm_no_distortion.json  vir_debug.json  vir_training.json  vision_correction_debug.json  vision_correction_learner.json
include/rhoban_model_learning/: composite_model.h  composite_prior.h  data_set_reader.h  data_set_reader_factory.h  default_data_set_reader.h  default_input.h  default_prior.h  default_space.h  deviation_based_space.h  input.h  input_reader.h  input_reader_factory.h  model.h  model_factory.h  model_learner.h  model_prior.h  model_prior_factory.h  model_space.h  model_space_factory.h  modular_model.h  predictor.h  predictor_factory.h  sample.h  tools.h
include/rhoban_model_learning/ball_models/: ball_model.h  ball_physical_model.h  linear_speed_estimator.h  position_predictor.h  position_predictor_factory.h  position_sequence.h  position_sequence_reader.h  speed_estimator.h  speed_estimator_factory.h  trajectory_predictor.h
include/rhoban_model_learning/basic_models/: linear_model.h  linear_predictor.h
include/rhoban_model_learning/humanoid_models/: calibration_data_set_reader.h  calibration_input.h  calibration_model.h  calibration_predictor.h  camera_model.h  infered_poses_data_set_reader.h  infered_poses_input.h  infered_poses_model.h  infered_poses_predictor.h  multi_poses_model.h  pose_model.h  poses_optimization_data_set_reader.h  poses_optimization_input.h  poses_optimization_model.h  poses_optimization_predictor.h  rotation_model.h  vision_correction_model.h  vision_noise_model.h
include/rhoban_model_learning/models/: holonomic_walk_model.h  simple_angular_model.h  simple_angular_model_input.h
include/rhoban_model_learning/tags/: aruco_collection.h  aruco_cube.h  aruco_tag.h  tags_collection.h  tags_sheet.h
include/rosban_model_learning/: input.h  model.h  model_learner.h  sample.h
include/rosban_model_learning/models/: holonomic_walk_model.h  simple_angular_model.h  simple_angular_model_input.h
include/starkit_model_learning/: composite_model.h  composite_prior.h  data_set_reader.h  data_set_reader_factory.h  default_data_set_reader.h  default_input.h  default_prior.h  default_space.h  deviation_based_space.h  input.h  model.h  model_factory.h  model_learner.h  model_prior.h  model_prior_factory.h  model_space.h  model_space_factory.h  predictor.h  predictor_factory.h  sample.h  tools.h
include/starkit_model_learning/ball_models/: ball_model.h  ball_physical_model.h  linear_speed_estimator.h  position_predictor.h  position_predictor_factory.h  position_sequence.h  position_sequence_reader.h  speed_estimator.h  speed_estimator_factory.h  trajectory_predictor.h
include/starkit_model_learning/basic_models/: linear_model.h  linear_predictor.h
include/starkit_model_learning/humanoid_models/: calibration_data_set_reader.h  calibration_input.h  calibration_model.h  calibration_predictor.h  camera_model.h  infered_poses_data_set_reader.h  infered_poses_input.h  infered_poses_model.h  infered_poses_predictor.h  multi_poses_model.h  pose_model.h  poses_optimization_data_set_reader.h  poses_optimization_input.h  poses_optimization_model.h  poses_optimization_predictor.h  rotation_model.h  vision_noise_model.h
include/starkit_model_learning/models/: holonomic_walk_model.h  simple_angular_model.h  simple_angular_model_input.h
include/starkit_model_learning/tags/: aruco_collection.h  aruco_cube.h  aruco_tag.h  tags_collection.h  tags_sheet.h
scripts/: #plot_graph.r#  .#plot_graph.r  plot_ball_trajectories.r  plot_graph.r  plot_vision_debug.r
src/rhoban_model_learning/: composite_model.cpp  composite_prior.cpp  data_set_reader_factory.cpp  default_data_set_reader.cpp  default_input.cpp  default_prior.cpp  default_space.cpp  deviation_based_space.cpp  input_reader_factory.cpp  model.cpp  model_factory.cpp  model_learner.cpp  model_prior.cpp  model_prior_factory.cpp  model_space.cpp  model_space_factory.cpp  modular_model.cpp  poses_optimization_model.cpp  predictor.cpp  predictor_factory.cpp  sample.cpp  sources.cmake  tools.cpp
src/rhoban_model_learning/ball_models/: ball_model.cpp  ball_physical_model.cpp  linear_speed_estimator.cpp  position_predictor.cpp  position_predictor_factory.cpp  position_sequence.cpp  position_sequence_reader.cpp  sources.cmake  speed_estimator.cpp  speed_estimator_factory.cpp  trajectory_predictor.cpp
src/rhoban_model_learning/basic_models/: linear_model.cpp  linear_predictor.cpp  sources.cmake
src/rosban_model_learning/: model.cpp  model_learner.cpp  sample.cpp  sources.cmake
src/starkit_model_learning/: composite_model.cpp  composite_prior.cpp  data_set_reader_factory.cpp  default_data_set_reader.cpp  default_input.cpp  default_prior.cpp  default_space.cpp  deviation_based_space.cpp  model.cpp  model_factory.cpp  model_learner.cpp  model_prior.cpp  model_prior_factory.cpp  model_space.cpp  model_space_factory.cpp  predictor.cpp  predictor_factory.cpp  sample.cpp  tools.cpp
src/tests/: test_simple_angular_model.cpp
tests/: composite_model.cpp
tests/basic_models/: linear_model.cpp
tests/humanoid_models/: calibration_model.cpp  infered_poses_data_set_reader.cpp  pose_model.cpp  poses_optimization_data_set_reader.cpp  vision_correction_model.cpp
tests/ressources/: VCM.json
tests/tags/: aruco_cube.cpp  tags_sheet.cpp
tools/: ball_sequences_filter.cpp  ball_trajectory_predictor.cpp  vision_correction_debug.cpp
(+77 files in other folders)
