<?xml version="1.0"?>
<package>
  <name>starkit_model_learning</name>
  <version>0.0.0</version>
  <description>This package provide tools to optimize the parameters of models</description>

  <maintainer email="medrimonia@gmail.com">medrimonia</maintainer>
  <author email="medrimonia@gmail.com">medrimonia</author>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>NCY</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>starkit_bbo</build_depend> <!-- starkit/bbo.git -->
  <build_depend>model</build_depend> <!-- starkit/model.git -->

  <run_depend>starkit_bbo</run_depend>
  <run_depend>model</run_depend>

</package>
